# thinc-apple-ops

./: .gitignore  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  build-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: azure-steps.yml
.github/workflows/: cibuildwheel.yml  publish_pypi.yml  tests.yml
thinc_apple_ops/: __init__.py  blas.pyx  ops.py  ops.pyx
thinc_apple_ops/tests/: test_gemm.py
