[metadata]
description = Improve Thinc's performance on Apple devices with native libraries
version = 0.0.2
url = https://github.com/explosion/thinc-apple-ops
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
setup_requires =
    cython>=0.25
    numpy>=1.7.0
install_requires =
    setuptools
    numpy>=1.7.0

# TODO: The ops classes aren't actually set up as entry-points yet.
#[options.entry_points]
#thinc_ops = 
#    AppleOps = thinc_apple_ops.AppleOps

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    thinc_apple_ops/__init__.py

[tool:pytest]
markers =
    slow

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy
